fixed aligning buttons on mobile

--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -159,3 +159,7 @@ li:hover {
   margin: 1%;
   box-shadow: 2px 2px 2px darkgrey;
 }
+
+i {
+  text-align: center;
+}
